update shared library to 1.0.8 -> 1.1.0